examples/errors/missing-global.spcasm
org 0
.local_label:
	nop